--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "react-native-chart-kit",
   "version": "4.3.0",
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com/"
+  },
   "devDependencies": {
     "babel-eslint": "10.x",
     "babel-plugin-module-resolver": "^3.1.1",
